--- a/src/layouts/post.astro
+++ b/src/layouts/post.astro
@@ -196,14 +196,6 @@ if (postIndex < allPosts.length) {
             <Search />
           </h1>
           <slot />
-          <div class="flex align-middle justify-center mt-4">
-            <a
-              class="inline-block h-10 items-center rounded bg-[#262626] px-5 py-3 text-sm font-medium text-white pay-button"
-              href="https://miaoyan.app/cats.html?name=潮流周刊"
-              target="_blank"
-              rel="noreferrer">喜欢周刊 → 去喂猫 ❤️</a
-            >
-          </div>
           <hr />
           <div
             class="flex justify-between md:flex-row flex-col mt-2 post-footer"
@@ -226,7 +218,7 @@ if (postIndex < allPosts.length) {
                 title="Follow">Twitter</a
               >
               <a
-                href={`https://github.com/${SITE.githubId}/weekly`}
+                href={`https://github.com/${SITE.githubId}/weekly-tw93`}
                 title="Star"
                 target="_blank"
                 class="lg:inline-block hidden"
